--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Mark A Vitale</h1>
         <div>
-            This page is under construciton. For now, just check out my <a href="https://www.linkedin.com/in/mark-vitale-83139921/">Linked In</a>.
+            This page is still under construciton. For now, just check out my <a href="https://www.linkedin.com/in/mark-vitale-83139921/">Linked In</a>.
         </div>
     </body>
 </html>
